--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 
 # This file lists all individuals having contributed content to the repository.
-# For more info, see [README] (https://github.com/afkgit/simple_shell/blob/master/README.md).
+# For more info, see [README] (https://github.com/Amiemar/simple_shell/blob/master/README.md).
 
-[Afolabi Fatai Kayode] (https://github.com/afkgit)
-[Rabia Hassen] (https://github.com/RabiaHassen)
+[Abiola Mariam Motunrayo] (https://github.com/Amiemar)
+[Akinyemi Owolabi] (https://github.com/)
